--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="row "></div>
                 <ul class="nav nav-tabs py-1 bg-light align-items-center">
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="#">
+                        <a class="nav-link disabled fw-bold" href="#">
                             <i class="fa-brands fa-instagram"></i>
                             <strong>Instagram</strong>
                         </a>
@@ -57,9 +57,9 @@
                         <div class="row">
                             <input type="text" placeholder="Add the caption of your post here" class="pb-5">
                         </div>
-                        <div class="row p-0">
-                            <button><i class="fa-solid fa-camera"></i></button>
-                            <i class="fa-solid fa-location-pin"></i>
+                        <div class="row ">
+                            <div class="col-1 border pt-1 pb-1 mt-1 me-1 justify-content-center"><i class="fa-solid fa-camera"></i></div>
+                            <div class="col-1 border pt-1 pb-1 mt-1 me-1 justify-content-center"><i class="fa-solid fa-location-pin"></i></div>
                         </div>
                     </div>
                 </div>
@@ -70,7 +70,7 @@
             </div>
             </div>
         </div>
-        <ul class="nav nav-pills col-2 mx-auto py-1" id="pills-tab" role="tablist">
+        <ul class="nav nav-pills justify-content-center py-1" id="pills-tab" role="tablist">
             <li class="nav-item" role="presentation">
               <button class="nav-link active" id="pills-multi-tab" data-bs-toggle="pill" data-bs-target="#pills-multi" type="button" role="tab" aria-controls="pills-multi" aria-selected="true">
                 <i class="fa-solid fa-table-cells"></i>
@@ -86,19 +86,19 @@
             <div class="tab-pane fade show active" id="pills-multi" role="tabpanel" aria-labelledby="pills-multi-tab" tabindex="0">
                 <div id="grid-view" class="mx-auto col-9">
                     <div class="row">
-                        <div class="col p-0 m-1"><img src="pexels-belle-co-99483-847393.jpg" class="image"></div>
-                        <div class="col p-0 m-1"><img src="pexels-chevanon-325045.jpg" class="image"></div>
-                        <div class="col p-0 m-1"><img src="pexels-lestrade84-17811.jpg" class="image">></div>
+                        <div class="col p-0 m-1 tile"><img src="pexels-belle-co-99483-847393.jpg" class="image"></div>
+                        <div class="col p-0 m-1 tile"><img src="pexels-chevanon-325045.jpg" class="image"></div>
+                        <div class="col p-0 m-1 tile"><img src="pexels-lestrade84-17811.jpg" class="image">></div>
                     </div>
                     <div class="row">
-                        <div class="col p-0 m-1"><img src="pexels-pixabay-34231.jpg" class="image"></div>
-                        <div class="col p-0 m-1"><img src="pexels-pixabay-45853.jpg" class="image"></div>
-                        <div class="col p-0 m-1"><img src="pexels-pixabay-47547.jpg" class="image"></div>
+                        <div class="col p-0 m-1 tile"><img src="pexels-pixabay-34231.jpg" class="image"></div>
+                        <div class="col p-0 m-1 tile"><img src="pexels-pixabay-45853.jpg" class="image"></div>
+                        <div class="col p-0 m-1 tile"><img src="pexels-pixabay-47547.jpg" class="image"></div>
                     </div>
                     <div class="row">
-                        <div class="col p-0 m-1"><img src="pexels-pixabay-50577.jpg" class="image"></div>
-                        <div class="col p-0 m-1"><img src="pexels-pixabay-67552.jpg" class="image"></div>
-                        <div class="col p-0 m-1"><img src="pexels-pixabay-86405.jpg" class="image"></div>
+                        <div class="col p-0 m-1 tile"><img src="pexels-pixabay-50577.jpg" class="image"></div>
+                        <div class="col p-0 m-1 tile"><img src="pexels-pixabay-67552.jpg" class="image"></div>
+                        <div class="col p-0 m-1 tile"><img src="pexels-pixabay-86405.jpg" class="image"></div>
                     </div>
                 </div>
             </div>
@@ -107,7 +107,7 @@
                     <div class="card p-0 m-1">
                         <div class="row p-1">
                             <h5 class="col m-1">Title</h5>
-                            <div class="col-1 fs-4">
+                            <div class="col-2 fs-4">
                                 8/24
                             </div>
                         </div>
@@ -120,7 +120,7 @@
                     <div class="card p-0 m-1">
                         <div class="row p-1">
                             <h5 class="col m-1">Title</h5>
-                            <div class="col-1 fs-4">
+                            <div class="col-2 fs-4">
                                 8/25
                             </div>
                         </div>
@@ -133,7 +133,7 @@
                     <div class="card p-0 m-1">
                         <div class="row p-1">
                             <h5 class="col m-1">Title</h5>
-                            <div class="col-1 fs-4">
+                            <div class="col-2 fs-4">
                                 8/26
                             </div>
                         </div>
