--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
                 </div>
                 <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-success">Post</button>
+                <button type="button" class="btn btn-success">Publish</button>
                 </div>
             </div>
             </div>
         </div>
-        <ul class="nav nav-pills justify-content-center py-1" id="pills-tab" role="tablist">
+        <ul class="nav nav-pills justify-content-center" id="pills-tab" role="tablist">
             <li class="nav-item" role="presentation">
               <button class="nav-link active" id="pills-multi-tab" data-bs-toggle="pill" data-bs-target="#pills-multi" type="button" role="tab" aria-controls="pills-multi" aria-selected="true">
                 <i class="fa-solid fa-table-cells"></i>
@@ -104,10 +104,10 @@
             </div>
             <div class="tab-pane fade" id="pills-single" role="tabpanel" aria-labelledby="pills-single-tab" tabindex="0">
                 <div id="single-view" class="mx-auto col-6">
-                    <div class="card p-0 m-1">
-                        <div class="row p-1">
-                            <h5 class="col m-1">Title</h5>
-                            <div class="col-2 fs-4">
+                    <div class="card p-0 my-4">
+                        <div class="row p-1 d-flex">
+                            <h5 class="col m-1">A turtle!</h5>
+                            <div class="col text-end fs-4">
                                 8/24
                             </div>
                         </div>
@@ -117,10 +117,10 @@
                             <p>This is a picture This is a picture This is a picture This is a picture This is a picture This is a picture This is a picture This is a picture This is a picture This is a picture This is a picture This is a picture</p>
                         </div>
                     </div>
-                    <div class="card p-0 m-1">
+                    <div class="card p-0 my-4">
                         <div class="row p-1">
-                            <h5 class="col m-1">Title</h5>
-                            <div class="col-2 fs-4">
+                            <h5 class="col m-1">A fish!</h5>
+                            <div class="col text-end fs-4">
                                 8/25
                             </div>
                         </div>
@@ -130,10 +130,10 @@
                             <p>This is a picture</p>
                         </div>
                     </div>
-                    <div class="card p-0 m-1">
+                    <div class="card p-0 my-4">
                         <div class="row p-1">
-                            <h5 class="col m-1">Title</h5>
-                            <div class="col-2 fs-4">
+                            <h5 class="col m-1">A bird!</h5>
+                            <div class="col text-end fs-4">
                                 8/26
                             </div>
                         </div>
