--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                             <input type="text" placeholder="Add the caption of your post here" class="pb-5">
                         </div>
                         <div class="row ">
-                            <div class="col-1 border pt-1 pb-1 mt-1 me-1 justify-content-center"><i class="fa-solid fa-camera"></i></div>
-                            <div class="col-1 border pt-1 pb-1 mt-1 me-1 justify-content-center"><i class="fa-solid fa-location-pin"></i></div>
+                            <div class="col-1 border p-0 mt-1 me-1 justify-content-center d-flex"><i class="fa-solid fa-camera p-1"></i></div>
+                            <div class="col-1 border p-0 mt-1 me-1 justify-content-center d-flex align-items-center"><i class="fa-solid fa-location-pin"></i></div>
                         </div>
                     </div>
                 </div>
